<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top"
    android:orientation="horizontal" >
	<ScrollView
	    android:id="@+id/scrollView"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingTop="0dp" >
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center" >
	
	        <ImageView
	            android:id="@+id/logo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:layout_marginBottom="5dp"
	            android:adjustViewBounds="true"
	            android:contentDescription="@string/empty"
	            android:src="@drawable/logo" />
	
		<RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/logo"
		    android:layout_centerHorizontal="true"
		    android:orientation="vertical" >
	
		    <TextView
		        android:id="@+id/text_words"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/element_desktop_words"
		        android:gravity="center"
		        android:text="@string/Vocabulary"
		        android:textColor="#ffffff"
		        android:textSize="20sp"
		        android:textStyle="bold" />
	
		    <TextView
		        android:id="@+id/text_about"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/text_words"
		        android:layout_below="@+id/text_words"
		        android:layout_marginTop="5dp"
		        android:background="@drawable/element_desktop_challenge"
		        android:gravity="center"
		        android:text="@string/About"
		        android:textColor="#ffffff"
		        android:textSize="20sp"
		        android:textStyle="bold" />
	
		    <TextView
		        android:id="@+id/text_challenge"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_above="@+id/text_about"
		        android:layout_marginLeft="5dp"
		        android:layout_toRightOf="@+id/text_about"
		        android:background="@drawable/element_desktop_challenge"
		        android:gravity="center"
		        android:text="@string/Challenge"
		        android:textColor="#ffffff"
		        android:textSize="20sp"
		        android:textStyle="bold" />
	
		    <TextView
		        android:id="@+id/text_settings"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/text_about"
		        android:layout_alignBottom="@+id/text_about"
		        android:layout_alignLeft="@+id/text_challenge"
		        android:background="@drawable/element_desktop_words"
		        android:gravity="center"
		        android:text="Settings"
		        android:textColor="#ffffff"
		        android:textSize="20sp"
		        android:textStyle="bold" />
	
		    <LinearLayout
		        android:id="@+id/share"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/text_about"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="12dp"
		        android:padding="5dp" >
	
		        <TextView
		            android:id="@+id/author"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="It&apos;s easy to share, just click here" />
	
		        <ImageView
		            android:id="@+id/imageView2"
		            android:layout_width="20sp"
		            android:layout_height="20sp"
		            android:layout_marginLeft="7dp"
		            android:adjustViewBounds="true"
		            android:src="@drawable/share" />
	
			</LinearLayout>
		</RelativeLayout>
	
	</RelativeLayout>
</ScrollView>
</LinearLayout>
